Major restructure, stuck on tst frmwk, needs debug